7/28/2009
* Fixed fill in helper for text and text area
