@@ -5,5 +5,6 @@
     %script{:type => "text/javascript", :src => "javascripts/lib/pickle.js"}
     %script{:type => "text/javascript", :src => "javascripts/features/my_test_feature.js"}
     %script{:type => "text/javascript", :src => "javascripts/tests/feature_test.js"}
+    %script{:type => "text/javascript", :src => "javascripts/tests/fill_in_test.js"}
     
   %body
