@@ -1,3 +1,4 @@
 7/28/2009
 * Fixed fill in helper for text and text area
+* Changed RunScenario to Run and AddFeature to Feature
 
